[tool.poetry]
name = "yah"
version = "0.1.0"
description = "highlight storage server for the yah chrome extension"
authors = ["Blake Smith <blakeinvictoria@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
